# ckanext-workflow

./: .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  test.ini
ckanext/workflow/: action.py  auth.py  cli.py  command.py  controller.py  helpers.py  interface.py  interfaces.py  plugin.py  presets.json  states.py  util.py  utils.py  validators.py  views.py
ckanext/workflow/fanstatic/: resource.config
ckanext/workflow/fanstatic/scripts/: reject_confirm.js
ckanext/workflow/logic/: action.py  auth.py
ckanext/workflow/plugin/: __init__.py  flask_plugin.py  pylons_plugin.py
ckanext/workflow/templates/: base.html  header.html
ckanext/workflow/templates/package/: edit_base.html  read.html  read_base.html
ckanext/workflow/templates/scheming/display_snippets/: link_by_dataset_id.html
ckanext/workflow/templates/snippets/: package_item.html
ckanext/workflow/templates/workflow/: pending_list.html
ckanext/workflow/tests/: plugin.py  states.py  test_action.py  test_auth.py  test_helper.py  test_helpers.py  test_plugin.py  test_revision.py  test_search.py  test_util.py
ckanext/workflow/tests/logic/: test_action.py  test_auth.py
