[metadata]
name = ckanext-workflow
version = 2.0.0
description = Extended workflow for dataset lifecycle
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/smotornyuk/ckanext-workflow
author = Sergey Motornyuk
author_email = sergey.motornyuk@linkdigital.com.au
license = AGPL
classifiers =
	    Development Status :: 4 - Beta
	    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
	    Programming Language :: Python :: 3.7
	    Programming Language :: Python :: 3.8
	    Programming Language :: Python :: 3.9
	    Programming Language :: Python :: 3.10
keywords =
	 CKAN

[options]
python_requires = >= 3.7
install_requires =
packages = find:
namespace_packages = ckanext
include_package_data = True
zip_safe = False

[options.entry_points]
ckan.plugins =
	     workflow = ckanext.workflow.plugin:WorkflowPlugin
	     native_workflow = ckanext.workflow.plugin:NativeWorkflowPlugin
	     test_workflow = ckanext.workflow.tests.plugin:TestWorkflowPlugin

babel.extractors =
		 ckan = ckan.lib.extract:extract_ckan

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/workflow/i18n/ckanext-workflow.pot
width = 80

[init_catalog]
domain = ckanext-workflow
input_file = ckanext/workflow/i18n/ckanext-workflow.pot
output_dir = ckanext/workflow/i18n

[update_catalog]
domain = ckanext-workflow
input_file = ckanext/workflow/i18n/ckanext-workflow.pot
output_dir = ckanext/workflow/i18n
previous = true

[compile_catalog]
domain = ckanext-workflow
directory = ckanext/workflow/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning

testpaths = ckanext/workflow/tests
addopts = --ckan-ini test.ini
